# habit-tracker-bot

./: .env.example  .gitignore  README.md  TS.md  alembic.ini  main.py  pyproject.toml
backend/: main.py
backend/api/: routes.py
backend/api/v1/: habits.py  router.py  routes.py  users.py
backend/core/: config.py  lifespan.py  logger.py
backend/db/: engine.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 709602a455f3_initial.py  b4f7886fc39c_initial.py  d2600f656e1f_add_is_active_and_auth_token_to_users.py
backend/models/: habit.py  timestamp_mixin.py  user.py
backend/schemas/: habit.py  user.py
backend/services/: habit_service.py  notification_service.py  user_service.py
bot/: __init__.py  auth.py  config.py  exceptions.py  logger.py  main.py  storage.py
bot/api/: __init__.py  client.py
bot/decorators/: auth.py
bot/handlers/: habit_form.py  habits.py  start.py  stats.py
bot/keyboards/: main_kb.py
bot/keyboards/inline/: habits.py
bot/middlewares/: __init__.py
bot/states/: habit.py
data/: bot.db
tests/backend/: conftest.py  main_test.py
tests/backend/api/: habits_routes_test.py
tests/backend/api/v1/: habits_routes_test.py  users_routes_test.py
tests/backend/services/: habit_service_test.py  notification_service_test.py  user_service_test.py
