[project]
name = "habit-tracker-bot"
version = "0.1.0"
description = "Telegram bot for tracking habits with FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "W", "UP", "S", "A", "DTZ", "T10", "EM", "RUF", "SIM", "TRY", "RET", "PTH"]
ignore = ["PLR2004", "TRY300"]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--import-mode=importlib"]
markers = [
    "habits_routes: test habits api routes", 
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]
"backend/db/migrations/**/*.py" = ["E501", "W291"]
